# saaras-tray

./: .gitignore  AGENTS.md  PRD-v1.md  README.md  knowledge-graph.md  package-lock.json  package.json  progress.md
.github/workflows/: ci.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  stt.rs
