[package]
name = "saaras-tray"
version = "0.1.0"
description = "Tray-app dictation for 10 Indic languages"
authors = ["Sovereign Shovels"]
license = "Apache-2.0"
repository = "https://github.com/sovereign-shovels/saaras-tray"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
cpal = "0.15"
hound = "3.5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
enigo = "0.2"
async-trait = "0.1"
toml = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
